<resources>
    <string name="app_name">Order View Review</string>
    <string name="retry">Retry</string>
    <string name="check_your_internet">Please check your internet connection.\nAnd try again</string>
    <string name="welcome_to_shopdrop">Welcome to Order View Review</string>
    <string name="do_all_your_home_shopping">Do all your food runs in one place conveniently.</string>
    <string name="all_shopping_done">All your food items are perfectly hand picked and dropped to you by our staff</string>
    <string name="all_shopping_delivered">Items are packaged and shipped to you within the shortest time possible</string>
    <string name="welcome_to_shopdrop_enjoy">Welcome to Order View Review\nHappy munchies :)</string>
    <string name="terms">By signing in you agree to our <b>terms and conditions</b></string>
    <string name="no_passwords">It\'s easy, no need for passwords</string>
    <string name="input_phone_number">Your Mobile Number</string>
    <string name="input_email">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="you_re_almost_done">Confirm details and start dinning</string>
    <string name="create_google_account">You have to create a <b>Google Account</b> to login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="invalid_number">Phone number is invalid !</string>
    <string name="input_country">Your Current Country</string>
    <string name="all_supermarkets_in_one_place">Find all your favorite food joints in one place</string>
    <string name="coming_soon">Soon</string>
    <string name="slogan">Order View Review</string>
    <string name="what_is_the_ad_about">What is the ad about ?</string>
    <string name="ad_headline">This is the headline for the AD</string>
    <string name="ad_offer">UpTo 10% Off</string>
    <string name="supermarkets">Food joints</string>
    <string name="orders">Orders</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="loading">Please wait…</string>
    <string name="install_google_play_services">Please Install Google Play Services to use this app</string>
    <string name="from_to_present">From 04–09–2018 to Present</string>
    <string name="save_details">Save Details</string>
    <string name="cannot_use_app">Sorry, this App is not yet available for your country.</string>
    <string name="please_enable_location_services"><b>Shopdrop</b> requires <b>location services</b>.\nPlease <b>enable location services</b> on your device.</string>
    <string name="enable">Enable Location</string>
    <string name="home">home</string>
    <string name="sponsored">Sponsored</string>
    <string name="soon_available">will soon be available</string>
    <string name="select_branch">Select branch to order food from</string>
    <string name="closed">Closed</string>
    <string name="getting_branches">Loading Branches…</string>
    <string name="open">Open</string>
    <string name="current_location">Is this close to your current location ?</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="select_this_branch">Select Branch</string>
    <string name="branches">branches</string>
    <string name="distance">Distance :</string>
    <string name="duration">Delivery duration :</string>
    <string name="delivery_cost">Delivery cost :</string>
    <string name="essentials">Essentials</string>
    <string name="categories">Available Categories</string>
    <string name="e_delivery_cost">Essentials delivery cost :</string>
    <string name="all">all</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="baby_feeding">baby_feeding</string>
    <string name="diapers">diapers</string>
    <string name="baby_food">baby_food</string>
    <string name="crayons">crayons</string>
    <string name="games">games</string>
    <string name="baby_wipes">baby_wipes</string>
    <string name="kids_toiletries">kids_toiletries</string>
    <string name="kids_furniture">kids_furniture</string>
    <string name="cotton_wool">cotton_wool</string>
    <string name="facial_care">facial_care</string>
    <string name="lip_care">lip_care</string>
    <string name="make_up">make_up</string>
    <string name="tomato_paste">tomato_paste</string>
    <string name="coconut_milk">coconut_milk</string>
    <string name="canned_fruit">canned_fruit</string>
    <string name="canned_beans">canned_beans</string>
    <string name="tinned_tomatoes">tinned_tomatoes</string>
    <string name="canned_fish">canned_fish</string>
    <string name="disinfectants">disinfectants</string>
    <string name="brushes">brushes</string>
    <string name="surface_cleaners">surface_cleaners</string>
    <string name="bathroom">bathroom</string>
    <string name="dish">dish</string>
    <string name="sponges">sponges</string>
    <string name="rubber_gloves">rubber_gloves</string>
    <string name="cooking_fat">cooking_fat</string>
    <string name="olive_oil">olive_oil</string>
    <string name="specialty_oils">specialty_oils</string>
    <string name="vegetable_oil">vegetable_oil</string>
    <string name="corn_oil">corn_oil</string>
    <string name="sunflower_oil">sunflower_oil</string>
    <string name="ghee">ghee</string>
    <string name="yoghurt">yoghurt</string>
    <string name="milk">milk</string>
    <string name="milk_yoghurt">milk_yoghurt</string>
    <string name="choco_drinks">choco_drinks</string>
    <string name="non_alcoholic">non_alcoholic</string>
    <string name="water">water</string>
    <string name="energy_drinks">energy_drinks</string>
    <string name="soft_drinks">soft_drinks</string>
    <string name="fruit_juice">fruit_juice</string>
    <string name="tea">tea</string>
    <string name="coffee">coffee</string>
    <string name="salt_spices">salt_spices</string>
    <string name="olives_pickles">olives_pickles</string>
    <string name="breakfast_cereals">breakfast_cereals</string>
    <string name="jams">jams</string>
    <string name="sugar">sugar</string>
    <string name="grains">grains</string>
    <string name="cake_bake">cake_bake</string>
    <string name="custard">custard</string>
    <string name="soup">soup</string>
    <string name="rice_pasta">rice_pasta</string>
    <string name="ugali">ugali</string>
    <string name="ready_to_eat">ready_to_eat</string>
    <string name="bread">bread</string>
    <string name="cheese">cheese</string>
    <string name="eggs">eggs</string>
    <string name="fruits">fruits</string>
    <string name="meat">meat</string>
    <string name="sausages">sausages</string>
    <string name="sea_food">sea_food</string>
    <string name="bakery">bakery</string>
    <string name="vegetables">vegetables</string>
    <string name="butter">butter</string>
    <string name="ready_meals">ready_meals</string>
    <string name="ice_cream">ice_cream</string>
    <string name="chips">chips</string>
    <string name="assorted_vegetables">assorted_vegetables</string>
    <string name="mixed_vegetables">mixed_vegetables</string>
    <string name="vitamins">vitamins</string>
    <string name="allergy">allergy</string>
    <string name="stomach">stomach</string>
    <string name="headaches">headaches</string>
    <string name="coughing">coughing</string>
    <string name="contraception">contraception</string>
    <string name="first_aid">first_aid</string>
    <string name="hot_water_bottle">hot_water_bottle</string>
    <string name="air_freshener">air_freshener</string>
    <string name="batteries">batteries</string>
    <string name="bikes">bikes</string>
    <string name="car_care">car_care</string>
    <string name="electronics">electronics</string>
    <string name="facial_tissue">facial_tissue</string>
    <string name="furniture">furniture</string>
    <string name="hand_wash">hand_wash</string>
    <string name="insecticides">insecticides</string>
    <string name="laundry">laundry</string>
    <string name="pets">pets</string>
    <string name="shoe_polish">shoe_polish</string>
    <string name="toilet_tissue">toilet_tissue</string>
    <string name="tools">tools</string>
    <string name="waste_bins">waste_bins</string>
    <string name="beds_mattresses">beds_mattresses</string>
    <string name="kitchen_utensils">kitchen_utensils</string>
    <string name="cutlery">cutlery</string>
    <string name="kitchen_towels">kitchen_towels</string>
    <string name="cookware">cookware</string>
    <string name="drinking_glasses">drinking_glasses</string>
    <string name="food_containers">food_containers</string>
    <string name="foil">foil</string>
    <string name="notepads">notepads</string>
    <string name="printing_paper">printing_paper</string>
    <string name="general_stationery">general_stationery</string>
    <string name="filing">filing</string>
    <string name="pens">pens</string>
    <string name="stationery_sets">stationery_sets</string>
    <string name="news_papers">news_papers</string>
    <string name="bibles">bibles</string>
    <string name="table_sauces">table_sauces</string>
    <string name="salad_dressing">salad_dressing</string>
    <string name="cooking_cream">cooking_cream</string>
    <string name="vinegar">vinegar</string>
    <string name="cooking_sauces">cooking_sauces</string>
    <string name="biscuits">biscuits</string>
    <string name="chocolates">chocolates</string>
    <string name="cocktail_snacks">cocktail_snacks</string>
    <string name="energy_bar">energy_bar</string>
    <string name="dried_fruit">dried_fruit</string>
    <string name="popcorn">popcorn</string>
    <string name="potato_crisps">potato_crisps</string>
    <string name="chewing_gum">chewing_gum</string>
    <string name="feminine_care">feminine_care</string>
    <string name="hair_care">hair_care</string>
    <string name="oral_care">oral_care</string>
    <string name="women_shaving">women_shaving</string>
    <string name="deodorants">deodorants</string>
    <string name="colognes_for_men">colognes_for_men</string>
    <string name="moisturisers">moisturisers</string>
    <string name="hand_lotion">hand_lotion</string>
    <string name="perfumes_for_women">perfumes_for_women</string>
    <string name="bath_time">bath_time</string>
    <string name="men_shaving">men_shaving</string>
    <string name="adult_diapers">adult_diapers</string>
    <string name="no_products_in_this_category">No products in this category :(</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="equals_sign">=</string>
    <string name="multiplication_sign">X</string>
    <string name="branches_info">The nearer you are to the branch of the supermarket, the cheaper the delivery cost and your convenience.</string>
    <string name="got_it">Got it</string>
    <string name="cart">Your food cart</string>
    <string name="feed">News feed</string>
    <string name="empty_cart">Your food cart is currently empty :(</string>
    <string name="select_delivery_method">Please select how you want to receive your food</string>
    <string name="deliver_to_doorstep">I want it delivered to my location</string>
    <string name="pick_up_from_branch">I want to pick it up myself from the store</string>
    <string name="are_you_sure_you_want_to_checkout">Are you sure you want to Checkout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="now_location">Your current location</string>
    <string name="sub_total">Subtotal</string>
    <string name="cart_empty">Cart is Empty</string>
    <string name="delivery_fee">Delivery Cost</string>
    <string name="vat">VAT</string>
    <string name="half_terms">I have read and understood the</string>
    <string name="terms_text"><b>Ts &amp; Cs</b></string>
</resources>