<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/almost_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/close_dialog"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/you_re_almost_done"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/gothamrounded" />

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_cancel_black_24dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/almost_done"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:elevation="7dp"
            android:src="@color/white" />

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button3"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:focusable="false"
            android:fontFamily="@font/gothamrounded"
            android:gravity="center"
            android:hint="@string/your_name"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/personEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personName"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button3"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:focusable="false"
            android:fontFamily="@font/gothamrounded"
            android:gravity="center"
            android:hint="@string/input_email"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/personCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personEmail"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button3"
            android:drawableStart="@drawable/ic_person_pin_circle_black_24dp"
            android:focusable="false"
            android:fontFamily="@font/gothamrounded"
            android:gravity="center"
            android:hint="@string/input_country"
            android:inputType="none"
            android:text="ke"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/personPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personCountry"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button3"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:fontFamily="@font/gothamrounded"
            android:gravity="center"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/check_linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/personPhone"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/black"
                android:fontFamily="@font/gothamrounded"
                android:lines="1"
                android:text="@string/half_terms"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/terms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/gothamrounded"
                android:lines="1"
                android:text="@string/terms_text"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading_dialog"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/check_linear"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimaryDark"
            app:indicatorName="PacmanIndicator" />

        <Button
            android:id="@+id/confirm_details"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/check_linear"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/gothamrounded"
            android:text="@string/confirm_details"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </RelativeLayout>
</ScrollView>