<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded">

    <ImageView
        android:id="@+id/google_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_location_off_black_24dp" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_image"
        android:layout_margin="5dp"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:text="@string/please_enable_location_services"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:fontFamily="@font/gothamrounded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:orientation="horizontal">

        <Button
            android:id="@+id/location_retry"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button3"
            android:fontFamily="@font/gothamrounded"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/enable_location"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button4"
            android:fontFamily="@font/gothamrounded"
            android:text="@string/enable"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>