<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded">

    <TextView
        android:id="@+id/select_branch_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:lines="1"
        android:paddingBottom="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="3dp"
        android:text="@string/current_location"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:fontFamily="@font/gothamrounded" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_branch_text"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:drawableStart="@drawable/ic_my_location_black_24dp"
        android:fontFamily="@font/gothamrounded"
        android:gravity="center"
        android:padding="5dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="Current location"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/retry_location"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/user_location"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button7"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:fontFamily="@font/gothamrounded" />

    <Button
        android:id="@+id/confirm_location"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/user_location"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button4"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/confirm_location"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:fontFamily="@font/gothamrounded" />
</RelativeLayout>