<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded">

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_chevron_left_black_24dp2"
        android:fontFamily="@font/gothamrounded"
        android:gravity="center"
        android:paddingEnd="18dp"
        android:text="@string/branches"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_branch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_store_black_24dp"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:lines="3"
            android:paddingBottom="3dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:fontFamily="@font/gothamrounded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/dialog_branch_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="Distance: 30 KMS"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:fontFamily="@font/gothamrounded" />

            <TextView
                android:id="@+id/dialog_delivery_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="@font/gothamrounded"
                android:gravity="center"
                android:text="Delivery duration: 33 Minutes"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dialog_delivery_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="@font/gothamrounded"
                android:gravity="center"
                android:text="Delivery cost: 200 KES"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dialog_essentials_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="@font/gothamrounded"
                android:gravity="center"
                android:text="Essentials Delivery cost: 200 KES"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirm_branch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/linear1"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button4"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/select_this_branch"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:fontFamily="@font/gothamrounded" />
</RelativeLayout>